# colour-sort

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  verify.py
.circleci/: config.yml
.pytest_cache/v/cache/: nodeids
colour_sort/: __init__.py  __main__.py  all.npy  cli.py  colour_space.py  convert.py  errors.py  hilbert.py  hilbertcurve.py  image.py  misc.py  pymorton.py  reducer.py  sort.py  verify.py
colour_sort/methods/: __init__.py
src/colour_sort/: cli.py  image.py  misc.py
tests/: conftest.py  test_cli.py  test_image.py  test_misc.py  test_verify.py
